# inmanta-module-factory

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.ci/: Jenkinsfile-auto-release  Jenkinsfile-integration-test  ci-pyp.yml
.github/: dependabot.yml
src/inmanta_module_factory/: __init__.py  builder.py
src/inmanta_module_factory/helpers/: __init__.py  const.py  utils.py
src/inmanta_module_factory/inmanta/: __init__.py  attribute.py  entity.py  entity_field.py  entity_relation.py  implement.py  implementation.py  index.py  module.py  module_element.py  plugin.py  typedef.py  types.py
src/inmanta_module_factory/inmanta/modules/: __init__.py  std.py
src/inmanta_module_factory/stats/: stats.py
tests/: conftest.py  test_extended_implement.py  test_foreign_imports.py  test_relation_index.py  test_simple_module.py  test_typedefs.py  test_upgrade_module.py
